# adex-validator-stack-rust

./: .dockerignore  .env.dist  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  Dockerfile-dev-sentry  Dockerfile-sentry  Makefile.toml  README.md  crates.js  docker-compose.bench.yml  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.express.yml  docker-compose.harness.yml  docker-compose.yml  help.html  index.html  package-lock.json  package.json  run-tests.sh  rust-toolchain  s.old  search-index.js  settings.html  source-files.js  validator-follower.dev.env  validator-leader.dev.env  validator.env.dist
adapter/: Cargo.toml  Makefile.toml  README.md  all.html  index.html  sidebar-items.js  struct.Adapter.html  struct.Error.html  struct.Ethereum.html  struct.LockedState.html  struct.UnlockedState.html
adapter-v2/: Cargo.toml
adapter-v2/src/: dummy.rs  ethereum.rs  lib.rs
adapter-v2/tests/: dummy.rs  ethereum_usage.rs
adapter/adapter/: struct.Adapter.html
adapter/client/: index.html  sidebar-items.js  trait.Locked.html  trait.Unlockable.html  trait.Unlocked.html
adapter/dummy/: index.html  sidebar-items.js  static.DUMMY_CHAIN.html  struct.Deposits.html  struct.Dummy.html  struct.HeaderToken.html  struct.Key.html  struct.Options.html  type.Adapter.html
adapter/error/: struct.Error.html
adapter/ethereum/: enum.Error.html  enum.LockedWallet.html  fn.get_counterfactual_address.html  index.html  sidebar-items.js  static.DEPOSITOR_BYTECODE_DECODED.html  static.ERC20_ABI.html  static.IDENTITY_ABI.html  static.OUTPACE_ABI.html  static.SWEEPER_ABI.html  struct.Ethereum.html  struct.Options.html  struct.UnlockedWallet.html  trait.ChainTransport.html  trait.Electrum.html  trait.WalletState.html  type.LockedAdapter.html  type.LockedClient.html  type.UnlockedAdapter.html  type.UnlockedClient.html
adapter/prelude/: index.html  sidebar-items.js  struct.LockedState.html  struct.UnlockedState.html
adapter/primitives/: enum.AdapterTypes.html  index.html  sidebar-items.js  struct.Address.html  struct.BigNum.html  struct.Chain.html  struct.ChainId.html  struct.ChainInfo.html  struct.ChainOf.html  struct.Channel.html  struct.Config.html  struct.Session.html  struct.TokenInfo.html  struct.ValidatorId.html  type.Deposit.html
adapter/scripts/: Dockerfile  start-docker.sh  stop-docker.sh
adapter/src/: adapter.rs  client.rs  dummy.rs  error.rs  ethereum.rs  impls.rs  lib.rs  sanity.rs  util.rs
adapter/tests/: dummy.rs  ethereum_usage.rs
adapter/util/: fn.get_balance_leaf.html  fn.get_signable_state_root.html  index.html  sidebar-items.js  struct.BalanceLeafError.html
adview-manager/: Cargo.toml  README.md
adview-manager/serve/: Cargo.toml
adview-manager/src/: helpers.rs  lib.rs  manager.rs
domain/: Cargo.toml  README.md
domain/src/: ad_unit.rs  asset.rs  balances_map.rs  big_num.rs  bignum.rs  channel.rs  channel_fixtures.rs  channel_test.rs  lib.rs  targeting_tag.rs  util.rs  validator.rs
memory-repository/: Cargo.toml
memory-repository/src/: lib.rs
primitives/: Cargo.toml  Makefile.toml  all.html  enum.DomainError.html  enum.Validator.html  index.html  sidebar-items.js  struct.AdSlot.html  struct.AdUnit.html  struct.Address.html  struct.Balances.html  struct.BigNum.html  struct.Campaign.html  struct.CampaignId.html  struct.Chain.html  struct.ChainId.html  struct.ChainOf.html  struct.Channel.html  struct.ChannelId.html  struct.Config.html  struct.Deposit.html  struct.EventSubmission.html  struct.IPFS.html  struct.UnifiedNum.html  struct.ValidatorDesc.html  struct.ValidatorId.html  trait.ToETHChecksum.html  trait.ToHex.html  type.BalancesMap.html  type.UnifiedMap.html
primitives/ad_slot/: struct.AdSlot.html
primitives/ad_unit/: struct.AdUnit.html
primitives/address/: enum.Error.html  enum.Prefix.html  fn.parse_bytes.html  index.html  sidebar-items.js  struct.Address.html
primitives/analytics/: enum.AuthenticateAs.html  enum.Metric.html  enum.OperatingSystem.html  enum.Timeframe.html  index.html  sidebar-items.js  struct.AnalyticsQuery.html
primitives/balances/: enum.Error.html  enum.OverflowError.html  index.html  sidebar-items.js  struct.Balances.html  struct.CheckedState.html  struct.UncheckedState.html  trait.BalancesState.html
primitives/balances_map/: index.html  sidebar-items.js  struct.Map.html  type.BalancesMap.html  type.UnifiedMap.html
primitives/big_num/: index.html  sidebar-items.js  struct.BigNum.html  struct.ParseBigIntError.html
primitives/campaign/: index.html  sidebar-items.js  struct.Active.html  struct.Campaign.html  struct.CampaignId.html  struct.Pricing.html  struct.PricingBounds.html  struct.Validators.html
primitives/campaign_validator/: enum.Error.html  enum.Validation.html  fn.all_validators_listed.html  fn.creator_listed.html  index.html  sidebar-items.js  trait.Validator.html
primitives/chain/: struct.Chain.html  struct.ChainId.html  struct.ChainOf.html
primitives/channel/: enum.ChannelError.html  index.html  sidebar-items.js  struct.ChainContext.html  struct.Channel.html  struct.ChannelId.html  struct.Nonce.html
primitives/config/: enum.ConfigError.html  enum.Environment.html  fn.configuration.html  index.html  sidebar-items.js  static.GANACHE_CONFIG.html  static.PRODUCTION_CONFIG.html  struct.ChainInfo.html  struct.Config.html  struct.Limits.html  struct.PlatformConfig.html  struct.Timeouts.html  (+4 more)
sentry/: API V5.md  Cargo.toml  Makefile.toml  Migrant.dist.toml  Migrant.toml  README.md  all.html  index.html  init-db.sql  sidebar-items.js  struct.Application.html  struct.Auth.html  struct.Session.html
test_harness/: Cargo.toml  Makefile.toml  all.html  index.html  sidebar-items.js  static.SNAPSHOT_CONTRACTS_1.html  static.SNAPSHOT_CONTRACTS_1337.html  static.VALIDATORS.html  struct.Contracts.html  struct.Setup.html  struct.TestValidator.html
validator/: Cargo.toml  README.md
validatorWorker/: Cargo.toml
validator_worker/: CHANGELOG.md  Cargo.toml  all.html  enum.GetStateRootError.html  index.html  sidebar-items.js  struct.SentryApi.html  struct.Worker.html  trait.GetStateRoot.html
(+1364 files in other folders)
