[workspace]

members = [
    "primitives",
    "adapter",
    "adview-manager",
    # Server for testing adview manager generated code
    "adview-manager/adview-serve",
    "validator_worker",
    "sentry",
    "test_harness",
]

[patch.crates-io]
postgres-types = { git = "https://github.com/elpiel/rust-postgres", branch = "boxed-dyn-ToSql"}