[workspace]

members = [
    "primitives",
    "adapter",
    "adview-manager",
    # `adview-serve` binary - Servers for testing adview manager generated code
    "adview-manager/serve",
    "validator_worker",
    "sentry",
    "test_harness",
]

# [patch.crates-io]
# postgres-types = { git = "https://github.com/elpiel/rust-postgres", branch = "boxed-dyn-ToSql"}