[workspace]

members = [
    "primitives",
    "adapter",
    "adview-manager",
    # `adview-serve` binary - Servers for testing adview manager generated code
    "adview-manager/serve",
    "validator_worker",
    "sentry",
    "test_harness",
    # for mocking calls to the platform
    "test_harness/platform",
]
