[package]
name = "adapter-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitives = {path = "../primitives", features = ["test-util"] }

async-trait = "0.1"
thiserror = "1"

serde_json = "1.0"

web3 = { version = "0.17", features = ["http-tls", "signing"] }
ethstore = { git = "https://github.com/openethereum/openethereum", tag = "v3.1.1-rc.1" }

[dev-dependencies]
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }