[package]
name = "adapter"
version = "0.1.0"
authors = [
  "Ambire <dev@ambire.com>",
  "Lachezar Lechev <lachezar@ambire.com>",
  "Omidiora Samuel <sam@ambire.com>",
]
edition = "2021"

[features]

test-util = ["primitives/test-util"]

[dependencies]
primitives = { path = "../primitives" }
# Time handling
chrono = "0.4"
# To/From Hex
hex = "0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
# Ethereum
web3 = { version = "0.17", features = ["http-tls", "signing"] }
ethstore = { git = "https://github.com/openethereum/openethereum", tag = "v3.1.1-rc.1" }
create2 = "0.0.2"

base64 = "0.13"
once_cell = "^1.8"
thiserror = "^1"
# Futures
futures = "0.3"
async-trait = "0.1"

# Dummy adapter
dashmap = "4.0"

[dev-dependencies]
byteorder = "^1.4"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.5"
