[package]
name = "adapter"
version = "0.2.0"
authors = [
  "Ambire <dev@ambire.com>",
  "Lachezar Lechev <lachezar@ambire.com>",
  "Samparsky <sam@ambire.com>",
]
edition = "2021"
license = "AGPL-3.0"


[features]

# Enables testing untilites for working with Ganache.
test-util = ["primitives/test-util"]

[dependencies]
primitives = { path = "../primitives" }

# For Ethereum client
web3 = { version = "0.18", features = ["http-tls", "signing"] }
ethstore = { git = "https://github.com/openethereum/openethereum", tag = "v3.1.1-rc.1" }
create2 = "0.0.2"

# For Dummy client
dashmap = "5"

async-trait = "0.1"
thiserror = "1"

# Time handling
chrono = "0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.13"
once_cell = "^1.8"
# Macro for easier derive of Display & FromStr
parse-display = "^0.5.0"

[dev-dependencies]
byteorder = "^1.4"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
pretty_assertions = "1"
