[package]
authors = [
  "Ambire <dev@ambire.com>",
  "Lachezar Lechev <lachezar@ambire.com>",
]
edition = "2018"
name = "adview-manager"
version = "0.1.0"

[dependencies]
# Domain
adex_primitives = { path = "../primitives", package = "primitives" }
chrono = "0.4"
num-integer = "0.1"
# (De)Serialization & Http requests
serde = { version = "^1.0", features = ['derive'] }
serde_json = "^1.0"
reqwest = { version = "0.11", features = ["json"] }
url = { version = "^2.1", features = ["serde"] }
# Logging
slog = { version = "^2.5.2", features = ["max_level_trace"] }
# Async
async-std = "^1.8"
# Other
lazy_static = "1.4"
thiserror = "^1.0"
rand = "^0.8"
