[package]
authors = ["Ambire <dev@ambire.com>", "Lachezar Lechev <lachezar@ambire.com>"]
edition = "2021"
name = "adview-manager"
version = "0.1.0"
license = "AGPL-3.0"

[dependencies]
# Domain
adex_primitives = { path = "../primitives", package = "primitives", features = [
  "test-util",
] }
chrono = "0.4"
num-integer = "0.1"
# (De)Serialization & Http requests
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
reqwest = { version = "0.11", features = ["json"] }
url = { version = "^2.1", features = ["serde"] }
# Logging
log = "0.4"
# Async
async-std = "^1.8"
# Other
once_cell = "^1.8"
thiserror = "^1.0"
rand = "^0.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
