[package]
authors = ["Ambire <dev@ambire.com>", "Lachezar Lechev <lachezar@ambire.com>"]
edition = "2021"
name = "adview-manager"
version = "0.2.0"
license = "AGPL-3.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Domain
adex_primitives = { version = "0.2.0", path = "../primitives", package = "primitives" }
chrono = "0.4"
num-integer = "0.1"
# (De)Serialization & Http requests
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
url = { version = "2", features = ["serde"] }
# Logging
log = "0.4"
# Async
async-std = "1"
# Other
once_cell = "1"
thiserror = "1"
rand = "0.8"

[dev-dependencies]
# enable the `test-util` only in dev
adex_primitives = { version = "0.2.0", path = "../primitives", package = "primitives", features = ["test-util"] }
