[package]
name = "domain"
version = "0.1.0"
authors = ["Lachezar Lechev <lachezar@adex.network>"]
edition = "2018"

[features]
fixtures = ["fake", "rand"]

[dependencies]
# Futures
futures-preview = { version = "=0.3.0-alpha.16", features = ["compat", "io-compat"] }
futures_legacy = { version = "0.1", package = "futures" }
# (De)Serialization
serde = { version = "^1.0", features = ['derive'] }
serde_json = "1.0"
serde_hex = { git = "https://github.com/forrest-marshall/serde-hex", package = "serde-hex" }
# Domain
num-bigint = { version = "0.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.1.42"
hex = "0.3.2"
# Fixtures
fake = { version = "^1.3", features = ["chrono"], optional = true }
rand = { version = "^0.6", optional = true }
