[package]
name = "memory-repository"
version = "0.1.0"
authors = ["Lachezar Lechev <lachezar@adex.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { version = "0.1", path = "../domain", features = ["repositories"] }
# Futures
futures-preview = { version = "=0.3.0-alpha.16", features = ["compat"] }