[package]
name = "primitives"
version = "0.1.0"
authors = ["Lachezar Lechev <lachezar@adex.network>, Omidiora Samuel <sam@adex.network>"]
edition = "2018"

[features]
postgres = ["postgres-types", "bytes", "tokio-postgres"]

[dependencies]
# (De)Serialization
serde = { version = "^1.0", features = ['derive'] }
serde_json = "1.0"
serde-hex = "0.1.0"
serde_millis = "0.1.1"
# Used prefixes on field for targeting::Input
serde_with = "1.5"
# Configuration
toml = "0.5"
# Logging
slog = { version = "^2.5.2" , features = ["max_level_trace"] }
slog-term = "^2.4.2"
slog-async = "^2.3.0"
# Domain
thiserror = "^1.0"
chrono = { version = "0.4", features = ["serde"] }
time = "0.1.42"
# Macro for easier derive of Display & FromStr
parse-display = "^0.3"
# CID & multihash / multibase
cid = "0.5"
hex = "0.4"
merkletree = "0.10.0"
tiny-keccak = "1.5"
rust-crypto = "0.2"
url = { version = "2.1", features = ["serde"]}
# Numbers - BigNum, Numbers, Traits and Derives
num-bigint = { version = "^0.3", features = ["serde"] }
num = "0.3"
num-traits = "0.2"
num-derive = "0.2"
# Fixtures
fake = { version = "^1.3", features = ["chrono"] }
rand = "^0.6"
# postgres feature
postgres-types = { version = "0.1.0", optional = true }
bytes = { version = "0.5", optional = true }
tokio-postgres = { version = "0.5.1", optional = true, features = ["with-chrono-0_4", "with-serde_json-1"] }
# Futures
futures = "0.3"
async-trait = "0.1.40"
# Other
lazy_static = "1.4.0"

[dev-dependencies]
pretty_assertions = "^0.6"
