[package]
name = "primitives"
version = "0.1.0"
authors = [
  "Lachezar Lechev <lachezar@adex.network>",
  "Omidiora Samuel <sam@adex.network>",
]
edition = "2018"

[features]
postgres = ["postgres-types", "bytes", "tokio-postgres"]

[dependencies]
# (De)Serialization
serde = { version = "^1.0", features = ['derive'] }
serde_json = "1.0"
serde-hex = "0.1.0"
serde_millis = "0.1.1"
# Used prefixes on field for targeting::Input, and `campaign::Active`
serde_with = "1.9"
# Configuration
toml = "0.5"
# Logging
slog = { version = "^2.5.2", features = ["max_level_trace"] }
slog-term = "^2.4.2"
slog-async = "^2.3.0"
# Domain
thiserror = "^1.0"
chrono = { version = "0.4", features = ["serde"] }
time = "0.1.42"
uuid = { version = "0.8", features = ["v4"] }
# For encoding the Channel to a ChannelId
ethabi = "13.0.0"
# For the nonce U256
ethereum-types = "0.11"
# Macro for easier derive of Display & FromStr
parse-display = "^0.5.0"
# CID & multihash / multibase
cid = "0.6"
hex = "0.4"
merkletree = "0.10.0"
tiny-keccak = { version = "^2.0", features = ["keccak"] }
url = { version = "=2.2", features = ["serde"] }
# Numbers - BigNum, Numbers, Traits and Derives
num = { version = "0.4", features = ["serde", "num-bigint"] }
num-traits = "0.2"
num-derive = "0.3"
# Fixtures
fake = { version = "^1.3", features = ["chrono"] }
rand = "^0.8"
# postgres feature
postgres-types = { version = "0.2.0", features = ["with-serde_json-1"], optional = true }
bytes = { version = "^1", optional = true }
tokio-postgres = { version = "0.7", optional = true, features = ["with-chrono-0_4", "with-serde_json-1"] }

# Futures
futures = "0.3"
async-trait = "0.1"
# Other
lazy_static = "1.4.0"

[dev-dependencies]
pretty_assertions = "^0.6"
# testing FromSql & ToSql implementation of structs
deadpool-postgres = "0.7.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
once_cell = "1.5"
