[package]
name = "primitives"
version = "0.1.0"
authors = [
  "Ambire <dev@ambire.com>",
  "Lachezar Lechev <lachezar@ambire.com>",
  "Omidiora Samuel <sam@ambire.com>",
  "Simeon Nakov <simeon@ambire.com>",
]
edition = "2021"
license = "AGPL-3.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
postgres = ["bytes", "tokio-postgres", "deadpool-postgres"]
# Enables the testing utilities like addresses, dummy Campaigns, Validators, IPFSes, AdUnits, etc.
# All Addresses and keystore files exist in the ganache-cli setup for testing with the EthereumAdapter
test-util = []

[[example]]
name = "channel_list_query"
required-features = ["test-util"]

[[example]]
name = "campaign_list_query"
required-features = ["test-util"]

[[example]]
name = "campaign_list_response"
required-features = ["test-util"]

[[example]]
name = "create_campaign"
required-features = ["test-util"]

[dependencies]
# (De)Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# TODO: Remove once we change `ChannelId` Serialize impl
serde-hex = "0.1"
serde_millis = "0.1"
# Used prefixes on field for targeting::Input, and `campaign::Active`
serde_with = "1"
# Configuration
toml = "0.5"
# Logging
slog = { version = "2", features = ["max_level_trace"] }
slog-term = "2"
slog-async = "2"
# Domain
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
# For encoding the Channel to a ChannelId
ethabi = "17"
# For the nonce U256
ethereum-types = "0.13"
# Macro for easier derive of Display & FromStr
parse-display = "0.5"
# CID & multihash / multibase
cid = "0.8"
hex = "0.4"
merkletree = "0.10"
tiny-keccak = { version = "2", features = ["keccak"] }
url = { version = "2", features = ["serde"] }
# Numbers - BigNum, Numbers, Traits and Derives
num = { version = "0.4", features = ["serde", "num-bigint"] }
num-traits = "0.2"
num-derive = "0.3"
# postgres feature
bytes = { version = "1", optional = true }
tokio-postgres = { version = "0.7", optional = true, features = [
  "with-chrono-0_4",
  "with-serde_json-1",
] }
# testing FromSql & ToSql implementation of structs
deadpool-postgres = { version = "0.10", optional = true }

async-trait = "0.1"
# Other
once_cell = "1"

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_qs = "0.9"
