[package]
name = "sentry"
version = "0.1.0"
authors = [
  "Ambire <dev@ambire.com>",
  "Lachezar Lechev <lachezar@ambire.com>",
  "Omidiora Samuel <sam@ambire.com>",
]
edition = "2021"

[features]

test-util = ["primitives/test-util"]

[dependencies]
# Futures
futures = "^0.3"
async-std = "^1"
async-trait = "^0.1"
# Primitives
primitives = { path = "../primitives", features = ["postgres", "test-util"] }
adapter = { version = "0.2", path = "../adapter" }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "4"
hex = "0.4"
# CLI
clap = "^2.33"
# Server
tokio = { version = "1", features = ["macros", "time", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["stream", "runtime", "http1", "server"] }
regex = "1"
# Database
redis = { version = "0.20", features = ["aio", "tokio-comp"] }
deadpool = "0.8.0"
deadpool-postgres = "0.9.0"
tokio-postgres = { version = "0.7.0", features = ["with-chrono-0_4", "with-serde_json-1"] }
postgres-types = { version = "0.2.1", features = [
  "derive",
  "with-chrono-0_4",
  "with-serde_json-1",
] }

# Migrations
migrant_lib = { version = "^0.32", features = ["d-postgres"] }
# Logger
slog = { version = "^2.2.3", features = ["max_level_trace"] }
# Deserialize values from Environment variables for the configuration
envy = "0.4"
# Serde
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_urlencoded = "^0.7"
# Other
thiserror = "^1.0"
once_cell = "1.5.2"

[dev-dependencies]
pretty_assertions = "1"

