[package]
name = "sentry"
version = "0.1.0"
authors = [
  "Ambire <dev@ambire.com>",
  "Lachezar Lechev <lachezar@ambire.com>",
  "Omidiora Samuel <sam@ambire.com>",
  "Simeon Nakov <simeon@ambire.com>",
]
edition = "2021"

default-run = "sentry"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "seed"
test = false # Is tested by default.
doctest = false # Documentation examples are tested by default.
bench = false # Is benchmarked by default.
doc = false # Is documented by default.
required-features = ["test-util"]

[features]

test-util = ["primitives/test-util", "adapter/test-util", "dashmap"]

[dependencies]
# Futures
futures = "0.3"
async-trait = "0.1"
# Primitives
primitives = { version = "0.2", path = "../primitives", features = ["postgres"] }
adapter = { version = "0.2", path = "../adapter" }
chrono = { version = "0.4", features = ["serde"] }
# used for redis test pool
dashmap = { version = "5", optional = true }
hex = "0.4"
# CLI
clap = { version = "3", features = ["cargo"] }
# Server
axum = { version = "0.5", features = ["http1", "http2", "headers"] }
axum-server = { version = "0.4", features = ["tls-rustls"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["cors"] }
tokio = { version = "1", features = ["macros", "time", "rt-multi-thread", "signal"] }

# Database
redis = { version = "0.21", features = ["aio", "tokio-comp"] }
deadpool = "0.9"
deadpool-postgres = "0.10"
# Should be the same version as in `primitives` and `deadpool-postgres`!
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
postgres-types = { version = "0.2", features = [
  "derive",
  "with-chrono-0_4",
  "with-serde_json-1",
  "array-impls",
] }

# Migrations
migrant_lib = { version = "0.33", features = ["d-postgres"] }
# Logger
slog = { version = "2", features = ["max_level_trace"] }
# Deserialize values from Environment variables for the configuration
envy = "0.4"
# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.10"
# Other
thiserror = "1"
once_cell = "1"
# UA parsing for `/units-for-slot` route
woothee = "0.13"
# Making requests to the platform
reqwest = { version = "0.11", features = ["json", "cookies"] }

[dev-dependencies]
pretty_assertions = "1"

primitives = { version = "0.2", path = "../primitives", features = ["postgres", "test-util"] }
adapter = { version = "0.2", path = "../adapter", features = ["test-util"] }

# we only require `hyper` for `hyper::body::to_bytes` function
hyper = { version = "0.14", default-features = false }
