[package]
edition = "2018"
name = "test_harness"
version = "0.1.0"

[dependencies]
primitives = {path = "../primitives"}
adapter = {version = "0.1", path = "../adapter", features = ["test-util"]}
sentry = {version = "0.1", path = "../sentry", features = ["test-util"]}
# ethereum
web3 = { version = "0.17", features = ["http-tls", "signing"] }
once_cell = "^1.8"
reqwest = { version = "0.11", features = ["json"] }

slog = { version = "^2.2.3", features = ["max_level_trace"] }
futures = "0.3"

subprocess = "0.2"

anyhow = {version = "1"}
tokio = {version = "1", features = ["rt-multi-thread", "macros", "time"]}
# probably needed for Relayer calls
# wiremock = "0.5"