[package]
edition = "2021"
name = "test_harness"
version = "0.1.0"
authors = ["Ambire <dev@ambire.com>", "Lachezar Lechev <lachezar@ambire.com>"]

[dependencies]
primitives = { path = "../primitives", features = ["postgres", "test-util"] }
adapter = { version = "0.1", path = "../adapter", features = ["test-util"] }
sentry = { version = "0.1", path = "../sentry", features = ["test-util"] }
validator_worker = { version = "0.2", path = "../validator_worker" }

chrono = { version = "0.4", features = ["serde"] }

# ethereum
web3 = { version = "0.17", features = ["http-tls", "signing"] }
once_cell = "^1.8"
reqwest = { version = "0.11", features = ["json"] }

serde_json = { version = "1" }

slog = { version = "^2.2.3", features = ["max_level_trace"] }
futures = "0.3"

subprocess = "0.2"

anyhow = { version = "1" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
# probably needed for Relayer calls
# wiremock = "0.5"
pretty_assertions = "^1.0"
