[package]
name = "validator"
version = "0.1.0"
authors = ["Lachezar Lechev <lachezar@adex.network>"]
edition = "2018"

[lib]
name = "validator"
path = "src/lib.rs"

[dependencies]
# Domain
domain = { version = "0.1", path = "../domain", features = ["repositories"] }
# Futures
futures-preview = { version = "=0.3.0-alpha.16", features = ["compat", "io-compat"] }
futures_legacy = { version = "0.1", package = "futures" }
# Concurrency
tokio = { version = "=0.1.19" }
# API client
reqwest = "0.9.18"
# Configuration
lazy_static = "1.3"
# (De)Serialization
serde = { version = "^1.0", features = ['derive'] }
serde_json = "1.0"