[package]
name = "validatorWorker"
version = "0.1.0"
authors = ["Lachezar Lechev <lachezar@adex.network>", "Samparsky <sam@adex.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "validator"
path = "src/lib.rs"

[dependencies]
# Primitve
primitives = { version = "0.1", path = "../primitives", features = ["repositories", "fixtures"] }
adapter = { version = "0.1", path = "../adapter", features = ["dummy-adapter"] }
chrono = { version = "0.4", features = ["serde"] }
# Futures
futures-preview = { version = "=0.3.0-alpha.16", features = ["compat", "io-compat"] }
futures_legacy = { version = "0.1", package = "futures" }
# Concurrency
tokio = { version = "=0.1.19" }
# API client
reqwest = "0.9.18"
# Configuration
lazy_static = "1.3"
dotenv = "0.14"
# (De)Serialization
serde = { version = "^1.0", features = ['derive'] }
serde_json = "1.0"
# CLI
clap = "2.33.0"
# Logger
slog = { version = "^2.2.3" , features = ["max_level_trace"] }
slog-term = "^2.4.0"
slog-async = "^2.3.0"