[package]
name = "validator_worker"
version = "0.2.0"
authors = [
  "Lachezar Lechev <lachezar@adex.network>",
  "Samparsky <sam@adex.network>",
]
edition = "2018"

[lib]
name = "validator_worker"
path = "src/lib.rs"

[dependencies]
# Primitve
primitives = { path = "../primitives" }
adapter = { version = "0.1", path = "../adapter" }
chrono = { version = "0.4", features = ["serde"] }
num = "0.4"
num-traits = "0.2"
# To/From Hex
hex = "0.4"
byteorder = "^1.4"
# Logging
slog = { version = "^2.7", features = ["max_level_trace"] }
# Futures
futures = "0.3"
# Concurrency
tokio = { version = "1", features = ["time", "rt-multi-thread"] }
# API client
reqwest = { version = "0.11", features = ["json"] }
# Other
lazy_static = "^1.4"
thiserror = "^1.0"
# (De)Serialization
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
toml = "0.5"
# CLI
clap = "^2.33"

[dev-dependencies]
wiremock = "0.5"
