[package]
authors = ["Ambire <dev@ambire.com>", "Lachezar Lechev <lachezar@ambire.com>"]
edition = "2021"
name = "adview-serve"
version = "0.1.0"
license = "AGPL-3.0"
publish = false

[features]

[dependencies]
# Domain
adex_primitives = { version = "0.2.0", path = "../../primitives", package = "primitives", features = ["test-util"] }
adview-manager = { path = "../" }

# Application errors
anyhow = "1"
# Time
chrono = "0.4"

# Async runtime
tokio = { version = "1", features = ["macros", "time", "rt-multi-thread"] }

# Web Server
axum = {version = "0.5", features = ["headers", "macros"]}

# Template engine
tera = { version = "1" }

# Mocking Market calls
wiremock = { version = "0.5" }

# (De)Serialization
serde = { version = "^1.0", features = ["derive"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

pretty_assertions = "1"
