[package]
name = "platform"
authors = ["Ambire <dev@ambire.com>", "Lachezar Lechev <lachezar@ambire.com>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Domain
adex_primitives = { version = "0.2.0", path = "../../primitives", package = "primitives", features = ["test-util"] }

# Application errors
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["macros", "time", "rt-multi-thread"] }

# Web Server
axum = {version = "0.5", features = ["headers", "macros"]}

# (De)Serialization
serde = { version = "^1.0", features = ["derive"] }

# In-memory database
dashmap = "5"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

pretty_assertions = "1"
